# cpp_3d_project

./: .gitignore
chap1_display_img_mean_filter_img/: CMakeLists.txt  displayImage.cpp
chap2.1_display_img_mean_filter_img/: CMakeLists.txt  mainFilter.cpp  meanFilter.cpp
chap2.3_segmentWithHistgram/: CMakeLists.txt
chap2.3_segmentWithHistgram/depthMap/: depthMap1.tiff  depthMap4.tiff  depthMap5.tiff  depthMap6.tiff  depthMap7.tiff
chap2_segmentWithHistgram/: segment.cpp  segmentWithHitogram
chap2_segmentWithHistgram/depthMap/: depthMap2.tiff  depthMap3.tiff  depthMap8.tiff
chap3.2.1_read_pcd_ply/: CMakeLists.txt  mainGenPointCloud.cpp  mainRead.cpp  mainRead1CloudStack.cpp  mainRead2.cpp  mainRead2CloudPointer.cpp  mainRead3.cpp  mainRead3CloudPointerColorMap.cpp  mainRead4CloudPointerXYZRGBNormal.cpp
chap3.2.2_kdtree_octree_nearest_neighbors/: CMakeLists.txt  mainKdtree.cpp  mainOctree.cpp
chap3.3_filtering_techniques/: CMakeLists.txt  mainFilter.cpp
chap3.3_filtering_techniques/include/: color.h  filter.h
chap3.3_filtering_techniques/src/: color.cpp  filter.cpp
